[versioneer]
VCS = git
style = pep440
versionfile_source = pystare/_version.py
versionfile_build = pystare/_version.py
tag_prefix = v
parentdir_prefix = pystare


[metadata]
name = pystare
author = example
author_email = author@example.com
description = PySTARE exposes the STARE library to python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpatioTemporal/pystare
project_urls =
    Bug Tracker = https://github.com/SpatioTemporal/pystare/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
packages = pystare
python_requires= >=3.5

[options.extras_require]  
test =
    numpy
    matplotlib
    pytest
    pytest-cov
docs = 
    sphinx
    numpydoc
