[versioneer]
VCS = git
style = pep440
versionfile_source = pystare/_version.py
versionfile_build = pystare/_version.py
tag_prefix = v
parentdir_prefix = pystare


[metadata]
name = pystare
author = Niklas Griessbaum
author_email = griessbaum@ucsb.edu
description = PySTARE exposes the STARE library to python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpatioTemporal/pystare
project_urls =
    Bug Tracker = https://github.com/SpatioTemporal/pystare/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

    
[options]
package_dir =
packages = pystare
python_requires= >=3.7
install_requires = numpy>=1.20.0
setup_requires = numpy>=1.20.0
include_package_data = False
    

[options.extras_require]  
test =
    numpy
    matplotlib
    pytest
    pytest-cov
    astropy
docs = 
    sphinx
    numpydoc
